# embedded-cross-framework

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
boards/: README.md  board_common.cmake
boards/Digilent/zybo_z720/: board.cmake
boards/Raspberry/: pico_stdlib_stubs.c  raspberry_pico.cmake  raspberry_pico_2350.cmake  raspberry_pico_common.cmake
boards/Raspberry/pico/: board.cmake  raspberry_pico.cmake
boards/Raspberry/pico2/: board.cmake  pico_flash_region.ld
boards/Raspberry/pico2/include/: hal.h
boards/Raspberry/pico2_riscv/: board.cmake
boards/Raspberry/pico2_riscv/include/: hal.h
boards/Raspberry/pico_rp2040/: board.cmake
boards/Raspberry/pico_rp2040/include/: hal.h
boards/Raspberry/pico_rp2350/: board.cmake
boards/Raspberry/pico_rp2350/include/: hal.h
boards/Raspberry/pico_rp2350_riscv/: board.cmake
boards/SF2/smartfusion2_m2s150/: board.cmake
boards/STM/nucleo_f207zg/: board.cmake
boards/STM/nucleo_f207zg/hal/include/: stm32f2xx_hal_conf.h
boards/STM/nucleo_f207zg/include/: hal.h  ll.h  stm32f2xx_hal_conf.h
boards/STM/nucleo_f446ze/: board.cmake
boards/STM/nucleo_f446ze/hal/include/: stm32f4xx_hal_conf.h
boards/STM/nucleo_f446ze/include/: hal.h  ll.h  stm32f4xx_hal_conf.h
boards/STM/nucleo_f756zg/: board.cmake
boards/STM/nucleo_f756zg/hal/include/: stm32f7xx_hal_conf.h
boards/STM/nucleo_f756zg/include/: hal.h  ll.h  stm32f7xx_hal_conf.h
boards/STM/nucleo_h7s3l8/: board.cmake
boards/STM/nucleo_h7s3l8/hal/include/: stm32h7rsxx_hal_conf.h  stm32h7xx_hal_conf.h
boards/STM/nucleo_h7s3l8/include/: hal.h  ll.h  stm32h7xx_hal_conf.h  stm32h7xx_hal_gpio_ex_compat.h
boards/TI/launchxl2_570lc43/: board.cmake
boards/nucleo_f207zg/: board.cmake
boards/nucleo_f207zg/include/: hal.h  stm32f2xx_hal_conf.h
boards/pico_rp2350_riscv/: board.cmake  rp2350_riscv.ld
cmake/: config.cmake  layout.cmake  macros.cmake  modules.cmake  on_device.cmake  rp2_common.cmake
cmake/modules/: CMakeDetermineHDLCompiler.cmake  CMakeDetermineLLFSMHDLCompiler.cmake  CMakeHDLCompiler.cmake  CMakeHDLCompiler.cmake.in  CMakeHDLInformation.cmake  CMakeLLFSMHDLCompiler.cmake.in  CMakeLLFSMHDLInformation.cmake  CMakeTestHDLCompiler.cmake  CMakeTestLLFSMHDLCompiler.cmake
projects/: README.md
projects/bare_metal/EmptyTemplate/: project.cmake
projects/bare_metal/EmptyTemplate/include/: config.h
projects/bare_metal/EmptyTemplate/src/: main.c
projects/fpga/EmptyProject/: CMakeLists.txt  README.md  project.cmake
projects/fpga/EmptyProject/vivado_project/: README.md
projects/fpga/LLFSMExample/: project.cmake
projects/fpga/LLFSMExample/machines/Arrangement1.arrangement/: .gitignore  model.json
projects/fpga/LLFSMExample/machines/LEDBlinker.machine/: .gitignore  model.json
toolchains/arm-none-eabi-armcl/: toolchain.cmake
toolchains/arm-none-eabi-clang/: toolchain.cmake
toolchains/arm-none-eabi-gcc/: toolchain.cmake
toolchains/arm-none-eabi-swiftc/: clang_stubs.c  toolchain.cmake
toolchains/fpga-xilinx-unknown-vivado/: toolchain.cmake
toolchains/riscv32-esp-elf-gcc/: toolchain.cmake
toolchains/riscv32-none-clang/: toolchain.cmake
toolchains/riscv32-none-elf-gcc/: toolchain.cmake
toolchains/xtensa-esp32-elf-gcc/: toolchain.cmake
